--- a/src/main/resources/static/assets/scss/4-components/_button.scss
+++ b/src/main/resources/static/assets/scss/4-components/_button.scss
@@ -1,7 +1,7 @@
 /*----------------------------------------*/
 /*    18 - Components - Button
 /*----------------------------------------*/
-.flosun-button{
+.Flowerin-button{
     display: inline-block;
     font-size: 15px;
     font-weight: 500;
