--- a/src/main/resources/static/assets/scss/4-components/_modal.scss
+++ b/src/main/resources/static/assets/scss/4-components/_modal.scss
@@ -1,6 +1,6 @@
 .modal-open{
     padding-right: 0px !important;
-    .flosun-modal{
+    .Flowerin-modal{
         .modal-dialog{
             max-width: 1000px;
             @include breakpoint(max-lg_device){
