--- a/src/main/resources/static/assets/scss/4-components/_slider.scss
+++ b/src/main/resources/static/assets/scss/4-components/_slider.scss
@@ -122,7 +122,7 @@
                 display:none;
             }
         }
-        .flosun-button{
+        .Flowerin-button{
             margin-top: 30px;
             @include breakpoint(max-sm_device){
                 margin-top: 0;
@@ -191,7 +191,7 @@
                 margin: 20px 0 15px;
             }
         }
-        .flosun-button{
+        .Flowerin-button{
             margin-top: 30px;
             @include breakpoint(max-sm_device){
                 margin-top: 0;
