--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -69,17 +69,6 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
-                                        <span class="menu-text"> Pages</span>
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-submenu dropdown-hover">
-                                        <li><a href="frequently-questions">FAQ</a></li>
-                                        <li><a href="login">Login</a></li>
-                                        <li><a href="register">Register</a></li>
-                                    </ul>
-                                </li>
-                                <li>
                                     <a href="about-us">
                                         <span class="menu-text"> About Us</span>
                                     </a>
@@ -111,15 +100,9 @@
                         <!-- mobile menu navigation start -->
                         <nav>
                             <ul class="mobile-menu">
-                                <li class="menu-item-has-children"><a href="#">Home</a>
+                                <li class="menu-item-has-children"><a href="/">Home</a>
                                 </li>
-                                <li class="menu-item-has-children"><a href="#">Shop</a>
-                                </li>
-                                <li class="menu-item-has-children "><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="frequently-questions">FAQ</a></li>
-                                        <li><a href="login-register">login &amp; register</a></li>
-                                    </ul>
+                                <li class="menu-item-has-children"><a href="shop">Shop</a>
                                 </li>
                                 <li><a href="about-us">About Us</a></li>
                             </ul>
@@ -253,10 +236,10 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="breadcrumb-content position-relative section-content">
-                        <h3 class="title-3">Shopping Cart</h3>
+                        <h3 class="title-3" style="font-size: 50px; color:white; letter-spacing: 10px">Shopping Cart</h3>
                         <ul>
-                            <li><a href="/">Home</a></li>
-                            <li>Shopping Cart</li>
+                            <li><a href="/" style="font-size: 25px; color:white">Home</a></li>
+                            <li style="font-size: 15px; color:white">Shopping Cart</li>
                         </ul>
                     </div>
                 </div>
@@ -302,11 +285,11 @@
                         <div class="apply-coupon-wrapper">
                             <form action="#" method="post" class=" d-block d-md-flex">
                                 <input type="text" placeholder="Enter Your Coupon Code" required />
-                                <button class="btn flosun-button primary-btn rounded-0 black-btn">Apply Coupon</button>
+                                <button class="btn Flowerin-button primary-btn rounded-0 black-btn">Apply Coupon</button>
                             </form>
                         </div>
                         <div class="cart-update mt-sm-16">
-                            <a href="shop" class="btn flosun-button primary-btn rounded-0 black-btn">Update Cart</a>
+                            <a href="shop" class="btn Flowerin-button primary-btn rounded-0 black-btn">Update Cart</a>
                         </div>
                     </div>
                 </div>
@@ -334,7 +317,7 @@
                                 </table>
                             </div>
                         </div>
-                        <a href="checkout" class="btn flosun-button primary-btn rounded-0 black-btn w-100">Proceed To Checkout</a>
+                        <a href="checkout" class="btn Flowerin-button primary-btn rounded-0 black-btn w-100">Proceed To Checkout</a>
                     </div>
                 </div>
             </div>
