--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow"/>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -70,17 +70,7 @@
                                 </a>
                             </li>
 
-                            <li>
-                                <a href="#">
-                                    <span class="menu-text"> Pages</span>
-                                    <i class="fa fa-angle-down"></i>
-                                </a>
-                                <ul class="dropdown-submenu dropdown-hover">
-                                    <li><a href="frequently-questions">FAQ</a></li>
-                                    <li><a href="login">Login</a></li>
-                                    <li><a href="register">Register</a></li>
-                                </ul>
-                            </li>
+
                             <li>
                                 <a href="about-us">
                                     <span class="menu-text"> About Us</span>
@@ -148,9 +138,9 @@
                                         <h5>$166.00</h5>
                                     </div>
                                     <div class="cart-links d-flex justify-content-between">
-                                        <a class="btn product-cart button-icon flosun-button dark-btn" href="cart">View
+                                        <a class="btn product-cart button-icon Flowerin-button dark-btn" href="cart">View
                                             cart</a>
-                                        <a class="btn flosun-button secondary-btn rounded-0"
+                                        <a class="btn Flowerin-button secondary-btn rounded-0"
                                            href="checkout">Checkout</a>
                                     </div>
                                 </div>
@@ -185,12 +175,7 @@
                             </li>
                             <li class="menu-item-has-children"><a href="#">Shop</a></li>
 
-                            <li class="menu-item-has-children "><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="frequently-questions">FAQ</a></li>
-                                    <li><a href="login-register">login &amp; register</a></li>
-                                </ul>
-                            </li>
+
                             <li><a href="about-us">About Us</a></li>
 
                         </ul>
@@ -331,10 +316,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Product Details</h3>
+                    <h3 class="title-3" style="font-size: 50px; color:white; letter-spacing: 10px">Product Details</h3>
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li>Product Details</li>
+                        <li><a href="/" style="font-size: 25px; color:white">Home</a></li>
+                        <li style="font-size: 15px; color:white">Product Details</li>
                     </ul>
                 </div>
             </div>
@@ -436,8 +421,8 @@
                             </div>
                         </div>
                         <div class="add-to_cart">
-                            <a class="btn product-cart button-icon flosun-button dark-btn" href="cart">Add to cart</a>
-                            <a class="btn flosun-button secondary-btn secondary-border rounded-0" href="wishlist">Add to
+                            <a class="btn product-cart button-icon Flowerin-button dark-btn" href="cart">Add to cart</a>
+                            <a class="btn Flowerin-button secondary-btn secondary-border rounded-0" href="wishlist">Add to
                                 wishlist</a>
                         </div>
                     </div>
@@ -534,7 +519,7 @@
                                                 <textarea class="comment-notes" required="required"></textarea>
                                             </div>
                                             <div class="comment-form-submit">
-                                                <button class="btn flosun-button secondary-btn rounded-0">Submit
+                                                <button class="btn Flowerin-button secondary-btn rounded-0">Submit
                                                 </button>
                                             </div>
                                         </form>
@@ -941,7 +926,7 @@
                                                title="https://hasthemes.com/">HasThemes</a> |
 
                             <!-- Modal -->
-                        <div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                        <div class="modal Flowerin-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
                              aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
                                 <div class="modal-content">
@@ -1010,9 +995,9 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="add-to_btn">
-                                                                    <a class="btn product-cart button-icon flosun-button dark-btn"
+                                                                    <a class="btn product-cart button-icon Flowerin-button dark-btn"
                                                                        href="cart">Add to cart</a>
-                                                                    <a class="btn flosun-button secondary-btn rounded-0"
+                                                                    <a class="btn Flowerin-button secondary-btn rounded-0"
                                                                        href="wishlist">Add to wishlist</a>
                                                                 </div>
                                                             </div>
