--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -114,18 +114,8 @@
                         <nav>
                             <ul class="mobile-menu">
                                 <li class="menu-item-has-children"><a href="#">Home</a>
-
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Shop</a>
-
-
-                                </li>
-
-                                <li class="menu-item-has-children "><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="frequently-questions">FAQ</a></li>
-                                        <li><a href="login-register">login &amp; register</a></li>
-                                    </ul>
                                 </li>
                                 <li><a href="about-us">About Us</a></li>
                             </ul>
@@ -259,10 +249,10 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="breadcrumb-content position-relative section-content">
-                        <h3 class="title-3">Login-Register</h3>
+                        <h3 class="title-3" style="font-size: 50px; color:white; letter-spacing: 10px">Login-Register</h3>
                         <ul>
-                            <li><a href="/">Home</a></li>
-                            <li>Login-Register</li>
+                            <li><a href="/" style="font-size: 25px; color:white">Home</a></li>
+                            <li style="font-size: 15px; color:white">Login-Register</li>
                         </ul>
                     </div>
                 </div>
@@ -298,7 +288,7 @@
                                 </div>
                             </div>
                             <div class="single-input-item mb-3">
-                                <button class="btn flosun-button secondary-btn theme-color rounded-0">Register</button>
+                                <button class="btn Flowerin-button secondary-btn theme-color rounded-0">Register</button>
                             </div>
                         </form>
                     </div>
