--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -254,10 +254,10 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="breadcrumb-content position-relative section-content">
-                        <h3 class="title-3">Checkout</h3>
+                        <h3 class="title-3" style="font-size: 50px; color:white; letter-spacing: 10px">Checkout</h3>
                         <ul>
-                            <li><a href="/">Home</a></li>
-                            <li>Checkout</li>
+                            <li><a href="/" style="font-size: 25px; color:white">Home</a></li>
+                            <li style="font-size: 15px; color:white">Checkout</li>
                         </ul>
                     </div>
                 </div>
@@ -492,7 +492,7 @@
                                 </div>
                                 <div class="order-button-payment">
                                     <form action="/payment" method="get">
-                                        <button class="btn flosun-button secondary-btn black-color rounded-0 w-100">Place Order</button>
+                                        <button class="btn Flowerin-button secondary-btn black-color rounded-0 w-100">Place Order</button>
                                     </form>
                                 </div>
                             </div>
