--- a/src/main/resources/templates/frequently-questions.html
+++ b/src/main/resources/templates/frequently-questions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -68,18 +68,6 @@
                                         <span class="menu-text">Shop</span>
                                     </a>
                                 </li>
-
-                                <li>
-                                    <a class="active" href="#">
-                                        <span class="menu-text"> Pages</span>
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-submenu dropdown-hover">
-                                        <li><a class="active" href="frequently-questions">FAQ</a></li>
-                                        <li><a href="login">Login</a></li>
-                                        <li><a href="register">Register</a></li>
-                                    </ul>
-                                </li>
                                 <li>
                                     <a href="about-us">
                                         <span class="menu-text"> About Us</span>
@@ -112,19 +100,12 @@
                         <!-- mobile menu navigation start -->
                         <nav>
                             <ul class="mobile-menu">
-                                <li class="menu-item-has-children"><a href="#">Home</a>
+                                <li class="menu-item-has-children"><a href="shop">Home</a>
 
                                 </li>
-                                <li class="menu-item-has-children"><a href="#">Shop</a>
+                                <li class="menu-item-has-children"><a href="shop">Shop</a>
 
 
-                                </li>
-
-                                <li class="menu-item-has-children "><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="frequently-questions">FAQ</a></li>
-                                        <li><a href="login-register">login &amp; register</a></li>
-                                    </ul>
                                 </li>
                                 <li><a href="about-us">About Us</a></li>
                             </ul>
@@ -258,10 +239,10 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="breadcrumb-content position-relative section-content">
-                        <h3 class="title-3">FAQ</h3>
+                        <h3 class="title-3" style="font-size: 50px; color:white; letter-spacing: 10px">FAQ</h3>
                         <ul>
-                            <li><a href="/">Home</a></li>
-                            <li>Faq</li>
+                            <li><a href="/" style="font-size: 25px; color:white">Home</a></li>
+                            <li style="font-size: 15px; color:white">Faq</li>
                         </ul>
                     </div>
                 </div>
