--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -69,18 +69,6 @@
 <!--                                        <i class="fa fa-angle-down"></i>-->
                                     </a>
                                 </li>
-
-                                <li>
-                                    <a href="#">
-                                        <span class="menu-text"> Pages</span>
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-submenu dropdown-hover">
-                                        <li><a href="frequently-questions">FAQ</a></li>
-                                        <li><a href="login">Login</a></li>
-                                        <li><a href="register">Register</a></li>
-                                    </ul>
-                                </li>
                                 <li>
                                     <a href="about-us">
                                         <span class="menu-text"> About Us</span>
@@ -117,15 +105,6 @@
 
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Shop</a>
-
-
-                                </li>
-
-                                <li class="menu-item-has-children "><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="frequently-questions">FAQ</a></li>
-                                        <li><a href="login-register">login &amp; register</a></li>
-                                    </ul>
                                 </li>
                                 <li><a href="about-us">About Us</a></li>
                             </ul>
@@ -262,7 +241,7 @@
 <!--                    <div class="intro11-content-2 text-center">-->
 <!--                        <h1 class="different-title">Quality</h1>-->
 <!--                        <h2 class="title text-white">The Gift of Flowers</h2>-->
-<!--                        <a href="product-details" class="btn flosun-button  secondary-btn theme-color rounded-0">Shop Collection</a>-->
+<!--                        <a href="product-details" class="btn Flowerin-button  secondary-btn theme-color rounded-0">Shop Collection</a>-->
 <!--                    </div>-->
                     <!-- Intro Content End -->
                 </div>
@@ -271,7 +250,7 @@
                     <div class="intro11-content-2 text-center">
                         <h1 class="different-title">Welcome</h1>
                         <h2 class="title">2020 Flower Trend</h2>
-                        <a href="product-details" class="btn flosun-button  secondary-btn theme-color rounded-0">Shop Collection</a>
+                        <a href="product-details" class="btn Flowerin-button  secondary-btn theme-color rounded-0">Shop Collection</a>
                     </div>
                     <!-- Intro Content End -->
                 </div>
@@ -297,7 +276,7 @@
                         <div class="desc-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                         </div>
-                        <a href="shop" class="btn flosun-button secondary-btn rounded-0">Shop Collection</a>
+                        <a href="shop" class="btn Flowerin-button secondary-btn rounded-0">Shop Collection</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-custom">
@@ -335,7 +314,7 @@
                         <div class="desc-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                         </div>
-                        <a href="shop" class="btn flosun-button secondary-btn rounded-0">Shop Collection</a>
+                        <a href="shop" class="btn Flowerin-button secondary-btn rounded-0">Shop Collection</a>
                     </div>
                 </div>
             </div>
@@ -920,188 +899,13 @@
                         <div class="swiper-pagination default-pagination"></div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-custom">
-                    <!--Section Title Start-->
-                    <div class="section-title text-center mb-30">
-                        <span class="section-title-1">From The Blogs</span>
-                        <h3 class="section-title-3">Our Latest Post</h3>
-                    </div>
-                    <!--Section Title End-->
-                    <div class="latest-post-carousel swiper-container intro11-carousel-wrap">
-                        <div class="swiper-wrapper">
-                            <div class="single-item swiper-slide">
-                                <!--Single Blog List Start-->
-                                <div class="blog-list-vertical">
-                                    <div class="post-date">07/09/2020</div>
-                                    <h3 class="post-title"><a href="blog-details-fullwidth">Post with Gallery</a></h3>
-                                    <p class="post-author">
-                                        <img src="assets/images/icon/author.png" alt=""> <span>Posted by </span>
-                                        <a href="#">admin </a>
-                                    </p>
-                                </div>
-                                <!--Single Blog list End-->
-                            </div>
-                            <div class="single-item swiper-slide">
-                                <!--Single Blog List Start-->
-                                <div class="blog-list-vertical">
-                                    <div class="post-date">07/09/2020</div>
-                                    <h3 class="post-title"><a href="blog-details-fullwidth">Post with Video</a></h3>
-                                    <p class="post-author">
-                                        <img src="assets/images/icon/author.png" alt=""> <span>Posted by </span>
-                                        <a href="#">admin </a>
-                                    </p>
-                                </div>
-                                <!--Single Blog list End-->
-                            </div>
-                            <div class="single-item swiper-slide">
-                                <!--Single Blog List Start-->
-                                <div class="blog-list-vertical">
-                                    <div class="post-date">07/09/2020</div>
-                                    <h3 class="post-title"><a href="blog-details-fullwidth">Post with Audio</a></h3>
-                                    <p class="post-author">
-                                        <img src="assets/images/icon/author.png" alt=""> <span>Posted by </span>
-                                        <a href="#">admin </a>
-                                    </p>
-                                </div>
-                                <!--Single Blog list End-->
-                            </div>
-                            <div class="single-item swiper-slide">
-                                <!--Single Blog List Start-->
-                                <div class="blog-list-vertical">
-                                    <div class="post-date">07/09/2020</div>
-                                    <h3 class="post-title"><a href="blog-details-fullwidth">Standard Blog Post</a></h3>
-                                    <p class="post-author">
-                                        <img src="assets/images/icon/author.png" alt=""> <span>Posted by </span>
-                                        <a href="#">admin </a>
-                                    </p>
-                                </div>
-                                <!--Single Blog list End-->
-                            </div>
-                        </div>
-                        <!-- Slider pagination -->
-                        <div class="swiper-pagination default-pagination"></div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
     <!-- Testimonial Area End Here -->
     <!-- Newsletter Area Start Here -->
-    <div class="news-letter-area gray-bg pt-no-text pb-no-text mt-text-3">
-        <div class="container custom-area">
-            <div class="row align-items-center">
-                <!--Section Title Start-->
-                <div class="col-md-6 col-custom">
-                    <div class="section-title text-left mb-35">
-                        <h3 class="section-title-3">Send Newsletter</h3>
-                        <p class="desc-content mb-0">Enter Your Email Address For Our Mailing List To Keep Your Self Update</p>
-                    </div>
-                </div>
-                <!--Section Title End-->
-                <div class="col-md-6 col-custom">
-                    <div class="news-latter-box">
-                        <div class="newsletter-form-wrap text-center">
-                            <form id="mc-form" class="mc-form">
-                                <input type="email" id="mc-email" class="form-control email-box" placeholder="email@example.com" name="EMAIL">
-                                <button id="mc-submit" class="btn rounded-0" type="submit">Subscribe</button>
-                            </form>
-                            <!-- mailchimp-alerts Start -->
-                            <div class="mailchimp-alerts text-centre">
-                                <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                                <div class="mailchimp-success text-success"></div><!-- mailchimp-success end -->
-                                <div class="mailchimp-error text-danger"></div><!-- mailchimp-error end -->
-                            </div>
-                            <!-- mailchimp-alerts end -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Newsletter Area End Here -->
     <!-- Blog Area Start Here -->
-    <div class="blog-post-area mt-text-3">
-        <div class="container custom-area">
-            <div class="row">
-                <!--Section Title Start-->
-                <div class="col-12">
-                    <div class="section-title text-center mb-30">
-                        <span class="section-title-1">From The Blogs</span>
-                        <h3 class="section-title-3">Our Latest Posts</h3>
-                    </div>
-                </div>
-                <!--Section Title End-->
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
-                    <div class="blog-lst">
-                        <div class="single-blog">
-                            <div class="blog-image">
-                                <a class="d-block" href="blog-details-fullwidth">
-                                    <img src="assets/images/blog/blog1.jpg" alt="Blog Image" class="w-100">
-                                </a>
-                            </div>
-                            <div class="blog-content">
-                                <div class="blog-text">
-                                    <h4><a href="blog-details-fullwidth">Standard blog post one</a></h4>
-                                    <div class="blog-post-info">
-                                        <span><a href="#">By admin</a></span>
-                                        <span>December 18, 2020</span>
-                                    </div>
-                                    <p>Lorem ipsu dolor sit amet cons elits cumque adipisicing, sed do incid eiusmod tempor ut labore et dolore eveniet .</p>
-                                    <a href="blog-details-fullwidth" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
-                    <div class="blog-lst">
-                        <div class="single-blog">
-                            <div class="blog-image">
-                                <a class="d-block" href="blog-details-fullwidth">
-                                    <img src="assets/images/blog/blog3.jpg" alt="Blog Image" class="w-100">
-                                </a>
-                            </div>
-                            <div class="blog-content">
-                                <div class="blog-text">
-                                    <h4><a href="blog-details-fullwidth">Standard blog post two</a></h4>
-                                    <div class="blog-post-info">
-                                        <span><a href="#">By admin</a></span>
-                                        <span>December 18, 2020</span>
-                                    </div>
-                                    <p>Lorem ipsu dolor sit amet cons elits cumque adipisicing, sed do incid eiusmod tempor ut labore et dolore eveniet .</p>
-                                    <a href="blog-details-fullwidth" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 col-custom mb-30">
-                    <div class="blog-lst">
-                        <div class="single-blog">
-                            <div class="blog-image">
-                                <a class="d-block" href="blog-details-fullwidth">
-                                    <img src="assets/images/blog/blog2.jpg" alt="Blog Image" class="w-100">
-                                </a>
-                            </div>
-                            <div class="blog-content">
-                                <div class="blog-text">
-                                    <h4><a href="blog-details-fullwidth">Standard blog post three</a></h4>
-                                    <div class="blog-post-info">
-                                        <span><a href="#">By admin</a></span>
-                                        <span>December 18, 2020</span>
-                                    </div>
-                                    <p>Lorem ipsu dolor sit amet cons elits cumque adipisicing, sed do incid eiusmod tempor ut labore et dolore eveniet .</p>
-                                    <a href="blog-details-fullwidth" class="readmore">Read More <i class="fa fa-long-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Blog Area End Here -->
     <!-- Brand Logo Area Start Here -->
     <div class="brand-logo-area gray-bg pt-no-text pb-no-text mt-text-5">
@@ -1147,7 +951,7 @@
     <!-- Brand Logo Area End Here -->
 
     <!-- Modal -->
-    <div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal Flowerin-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <button type="button" class="close close-button" data-dismiss="modal" aria-label="Close">
@@ -1204,8 +1008,8 @@
                                                 </div>
                                             </div>
                                             <div class="add-to_btn">
-                                                <a class="btn product-cart button-icon flosun-button dark-btn" href="cart">Add to cart</a>
-                                                <a class="btn flosun-button secondary-btn rounded-0" href="wishlist">Add to wishlist</a>
+                                                <a class="btn product-cart button-icon Flowerin-button dark-btn" href="cart">Add to cart</a>
+                                                <a class="btn Flowerin-button secondary-btn rounded-0" href="wishlist">Add to wishlist</a>
                                             </div>
                                         </div>
                                     </div>
