--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow"/>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -111,54 +111,11 @@
                     <!-- mobile menu navigation start -->
                     <nav>
                         <ul class="mobile-menu">
-                            <li class="menu-item-has-children"><a href="#">Home</a>
-                                <ul class="dropdown">
-                                    <li><a href="/">Home Page 1</a></li>
-                                    <li><a href="index-2">Home Page 2</a></li>
-                                    <li><a href="index-3">Home Page 3</a></li>
-                                    <li><a href="index-4">Home Page 4</a></li>
-                                </ul>
+                            <li class="menu-item-has-children"><a href="/">Home</a>
                             </li>
-                            <li class="menu-item-has-children"><a href="#">Shop</a>
-                                <ul class="megamenu dropdown">
-                                    <li class="mega-title has-children"><a href="#">Shop Layouts</a>
-                                        <ul class="dropdown">
-                                            <li><a href="shop">Shop Left Sidebar</a></li>
-                                            <li><a href="shop-right-sidebar">Shop Right Sidebar</a></li>
-                                            <li><a href="shop-list-left">Shop List Left Sidebar</a></li>
-                                            <li><a href="shop-list-right">Shop List Right Sidebar</a></li>
-                                            <li><a href="shop-fullwidth">Shop Full Width</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="mega-title has-children"><a href="#">Product Details</a>
-                                        <ul class="dropdown">
-                                            <li><a href="product-details">Single Product Details</a></li>
-                                            <li><a href="variable-product-details">Variable Product Details</a></li>
-                                            <li><a href="external-product-details">External Product Details</a></li>
-                                            <li><a href="gallery-product-details">Gallery Product Details</a></li>
-                                            <li><a href="countdown-product-details">Countdown Product Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="mega-title has-children"><a href="#">Others</a>
-                                        <ul class="dropdown">
-                                            <li><a href="error404">Error 404</a></li>
-                                            <li><a href="compare">Compare Page</a></li>
-                                            <li><a href="cart">Cart Page</a></li>
-                                            <li><a href="checkout">Checkout Page</a></li>
-                                            <li><a href="wishlist">Wish List Page</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-
-                            <li class="menu-item-has-children "><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="frequently-questions">FAQ</a></li>
-                                    <li><a href="login-register">login &amp; register</a></li>
-                                </ul>
+                            <li class="menu-item-has-children"><a href="shop">Shop</a>
                             </li>
                             <li><a href="about-us">About Us</a></li>
-
                         </ul>
                     </nav>
                     <!-- mobile menu navigation end -->
@@ -297,10 +254,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Login-Register</h3>
+                    <h3 class="title-3" style="font-size: 50px; color:white; letter-spacing: 10px">Login-Register</h3>
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li>Login-Register</li>
+                        <li><a href="/" style="font-size: 25px; color:white">Home</a></li>
+                        <li style="font-size: 15px; color:white">Login-Register</li>
                     </ul>
                 </div>
             </div>
@@ -331,7 +288,7 @@
                             <input type="pas" id="password" placeholder="password" name="password">
                         </div>
                         <div class="single-input-item mb-3">
-                            <button class="btn flosun-button secondary-btn theme-color rounded-0">Login</button>
+                            <button class="btn Flowerin-button secondary-btn theme-color rounded-0">Login</button>
                         </div>
                     </form>
                     <div class="single-input-item">
