--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FloSun - Flower Shop HTML5 Template</title>
+    <title>Flowerin - Flower Shop HTML5 Template</title>
     <meta name="robots" content="noindex, follow"/>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -71,17 +71,6 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <span class="menu-text"> Pages</span>
-                                    <i class="fa fa-angle-down"></i>
-                                </a>
-                                <ul class="dropdown-submenu dropdown-hover">
-                                    <li><a href="frequently-questions">FAQ</a></li>
-                                    <li><a href="login">Login</a></li>
-                                    <li><a href="register">Register</a></li>
-                                </ul>
-                            </li>
-                            <li>
                                 <a href="about-us">
                                     <span class="menu-text"> About Us</span>
                                 </a>
@@ -119,10 +108,10 @@
                                     </div>
                                     <div class="cart-links d-flex justify-content-between">
                                         <form th:action="'/cart/' + ${user.id}" method="post">
-<!--                                        <a class="btn product-cart button-icon flosun-button dark-btn" href="cart">View cart</a>-->
-                                            <button type="submit" class="btn product-cart button-icon flosun-button dark-btn">View cart</button>
+<!--                                        <a class="btn product-cart button-icon Flowerin-button dark-btn" href="cart">View cart</a>-->
+                                            <button type="submit" class="btn product-cart button-icon Flowerin-button dark-btn">View cart</button>
                                         </form>
-                                        <a class="btn flosun-button secondary-btn rounded-0" href="checkout">Checkout</a>
+                                        <a class="btn Flowerin-button secondary-btn rounded-0" href="checkout">Checkout</a>
                                     </div>
                                 </div>
                             </li>
@@ -155,12 +144,6 @@
                             <li class="menu-item-has-children"><a href="/">Home</a>
                             </li>
                             <li class="menu-item-has-children"><a href="shop">Shop</a>
-                            </li>
-                            <li class="menu-item-has-children "><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="frequently-questions">FAQ</a></li>
-                                    <li><a href="login-register">login &amp; register</a></li>
-                                </ul>
                             </li>
                             <li><a href="about-us">About Us</a></li>
                         </ul>
@@ -302,10 +285,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Blog Sidebar</h3>
+                    <h3 class="title-3" style="font-size: 50px; color:white; letter-spacing: 10px">Blog Sidebar</h3>
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li>Shop</li>
+                        <li><a href="/" style="font-size: 25px; color:white">Home</a></li>
+                        <li style="font-size: 15px; color:white">Shop</li>
                     </ul>
                 </div>
             </div>
@@ -396,7 +379,7 @@
                                     </div>
                                     <p class="desc-content" th:text="${el.description}"></p>
                                     <div class="button-listview">
-                                        <a href="cart" class="btn product-cart button-icon flosun-button dark-btn"
+                                        <a href="cart" class="btn product-cart button-icon Flowerin-button dark-btn"
                                            data-toggle="tooltip" data-placement="top" title="Add to Cart"> <span>Add to Cart</span>
                                         </a>
                                         <a class="list-icon" href="compare" title="Compare">
@@ -438,42 +421,8 @@
                 <aside class="sidebar_widget widget-mt">
                     <div class="widget_inner">
                         <div class="widget-list widget-mb-1">
-                            <h3 class="widget-title">Menu Categories</h3>
+                            <h3 class="widget-title"></h3>
                             <!-- Widget Menu Start -->
-                            <nav>
-                                <ul class="mobile-menu p-0 m-0">
-                                    <li class="menu-item-has-children"><a href="#">Birthday Boqutets</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Aster</a></li>
-                                            <li><a href="#">Aubrieta</a></li>
-                                            <li><a href="#">Basket of Gold</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children"><a href="#">Funeral Flowers</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Cleome</a></li>
-                                            <li><a href="#">Columbine</a></li>
-                                            <li><a href="#">Coneflower</a></li>
-                                            <li><a href="#">Corepsis</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children"><a href="#">Interior Decor</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Calendula</a></li>
-                                            <li><a href="#">Castor Bean</a></li>
-                                            <li><a href="#">Catmint</a></li>
-                                            <li><a href="#">Chives</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children"><a href="#">Custom Orders</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Lily</a></li>
-                                            <li><a href="#">Rose</a></li>
-                                            <li><a href="#">Sunflower</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </nav>
                             <!-- Widget Menu End -->
                         </div>
                     </div>
@@ -487,7 +436,7 @@
 
 
 <!-- Modal -->
-<div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal Flowerin-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <button type="button" class="close close-button" data-dismiss="modal" aria-label="Close">
@@ -547,7 +496,7 @@
                                             </div>
                                         </div>
                                         <div class="add-to_btn">
-                                            <a class="btn product-cart button-icon flosun-button dark-btn" href="cart">Add
+                                            <a class="btn product-cart button-icon Flowerin-button dark-btn" href="cart">Add
                                                 to cart</a>
                                         </div>
                                     </div>
